// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPhoneGoals(offer) Offer 1910572006735216640 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 194,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "rooms",
        "offer_id": "1910572006735216640",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.rooms.show",
  "phone.sell.rooms.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 2368124054583941120 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 2,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "house",
        "offer_id": "2368124054583941120",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.house.show",
  "phone.sell.house.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 2388945512219475200 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 213,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "lot",
        "offer_id": "2388945512219475200",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.lot.show",
  "phone.sell.lot.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 2486833153976465153 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 213,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "lot",
        "offer_id": "2486833153976465153",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 1,
        "placement": "other",
        "tuz": 0,
        "vas": Array [
          "promotion",
        ],
      },
    },
  ],
  "phone.lot.show",
  "phone.sell.lot.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 2967405380307298463 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 213,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "house",
        "offer_id": "2967405380307298463",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.house.show",
  "phone.sell.house.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 3982838136380954880 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 2,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "commercial",
        "offer_id": "3982838136380954880",
        "offer_type": "rent",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 1,
        "placement": "other",
        "pricing_period": "PER_MONTH",
        "tuz": 0,
        "vas": Array [
          "turbo",
          "premium",
          "promotion",
          "raising",
        ],
      },
    },
  ],
  "phone.commercial.show",
  "phone.rent.commercial.show",
  "phone.rent.show",
]
`;

exports[`getPhoneGoals(offer) Offer 4178644675543341312 1`] = `
Array [
  "all.phone.return.call",
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "flat_type": "secondary",
        "geo_id": 10742,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "apartment",
        "offer_id": "4178644675543341312",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.apartment.show",
  "phone.sell.apartment.secondary.show",
  "phone.sell.apartment.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 4588041564717681408 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 2,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "commercial",
        "offer_id": "4588041564717681408",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.commercial.show",
  "phone.sell.commercial.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 5254973568545450240 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 2,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "garage",
        "offer_id": "5254973568545450240",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.garage.show",
  "phone.sell.garage.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 5413677472560653824 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 213,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "lot",
        "offer_id": "5413677472560653824",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.lot.show",
  "phone.sell.lot.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 5478349734607340288 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 213,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "rooms",
        "offer_id": "5478349734607340288",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.rooms.show",
  "phone.sell.rooms.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 5619085084072273152 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 213,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "commercial",
        "offer_id": "5619085084072273152",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.commercial.show",
  "phone.sell.commercial.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 5752181058418234624 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 20037,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "house",
        "offer_id": "5752181058418234624",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.house.show",
  "phone.sell.house.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 6118565685537966080 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 2,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "garage",
        "offer_id": "6118565685537966080",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.garage.show",
  "phone.sell.garage.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 6529433429371256064 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 213,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "lot",
        "offer_id": "6529433429371256064",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.lot.show",
  "phone.sell.lot.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 6900000047329405696 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 2,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "commercial",
        "offer_id": "6900000047329405696",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.commercial.show",
  "phone.sell.commercial.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 7324333459856457472 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 2,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "lot",
        "offer_id": "7324333459856457472",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 1,
        "placement": "other",
        "tuz": 0,
        "vas": Array [
          "premium",
          "promotion",
        ],
      },
    },
  ],
  "phone.lot.show",
  "phone.sell.lot.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 7444370360693349120 1`] = `
Array [
  "all.phone.return.call",
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "flat_type": "secondary",
        "geo_id": 213,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "apartment",
        "offer_id": "7444370360693349120",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 1,
        "placement": "other",
        "tuz": 0,
        "vas": Array [
          "premium",
          "promotion",
        ],
      },
    },
  ],
  "phone.apartment.show",
  "phone.sell.apartment.secondary.show",
  "phone.sell.apartment.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 7825327396047447809 1`] = `
Array [
  "all.phone.return.call",
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "flat_type": "secondary",
        "geo_id": 213,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "apartment",
        "offer_id": "7825327396047447809",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 1,
        "placement": "other",
        "tuz": 0,
        "vas": Array [
          "turbo",
          "premium",
          "promotion",
          "raising",
        ],
      },
    },
  ],
  "phone.apartment.show",
  "phone.sell.apartment.secondary.show",
  "phone.sell.apartment.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 8108045632893637377 1`] = `
Array [
  "all.phone.return.call",
  "nb.phone.show",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "flat_type": "new_secondary",
        "geo_id": 216,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "apartment",
        "offer_id": "8108045632893637377",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 1,
        "placement": "other",
        "tuz": 0,
        "vas": Array [
          "premium",
        ],
      },
    },
  ],
  "phone.apartment.show",
  "phone.sell.apartment.new_secondary.show",
  "phone.sell.apartment.show",
  "phone.sell.show",
]
`;

exports[`getPhoneGoals(offer) Offer 8925888208617835520 1`] = `
Array [
  "card.phone.total",
  Array [
    "phone.all.show",
    Object {
      "phone": Object {
        "arenda_offer": undefined,
        "geo_id": 213,
        "has_egrn_report": 0,
        "has_good_price": 0,
        "has_plan": 0,
        "has_video_review": 0,
        "has_virtual_tour": 0,
        "offer_category": "commercial",
        "offer_id": "8925888208617835520",
        "offer_type": "sell",
        "online_show_available": 0,
        "page": "offer",
        "page_type": "other",
        "payed": 0,
        "placement": "other",
        "tuz": 0,
      },
    },
  ],
  "phone.commercial.show",
  "phone.sell.commercial.show",
  "phone.sell.show",
]
`;
